# bells

./: .gitignore  CLAUDE.md  Makefile  README.md  ROUTINES.md  TODO.md  alarms.js  bells.js  build.mjs  calendar.js  calendars.json  datetime.js  dom.js  index.html  manifest.json  package-lock.json  package.json  publish.sh  sample-routines.json  server.js  style.css  sw.js  sw.js.template  timer-routines.js  timer.js  tsconfig.json  version.sh
.github/workflows/: publish-calendars.yml  publish.yml
bhs-calendars/: 2022-2023.json  2023-2024.json  2024-2025.json  2025-2026.json  2026-2027.json  bhs-2023-2024.json  bhs-2025-2026.json  bhs-2026-2027.json  index.js  king-6-2025-2026.json  king-6-2026-2027.json  king-6.json  king-7-2025-2026.json  king-7-2026-2027.json  king-7.json  king-8-2025-2026.json  king-8-2026-2027.json  king-8.json  longfellow-6-2025-2026.json  longfellow-6-2026-2027.json  longfellow-6.json  longfellow-78-2025-2026.json  longfellow-78-2026-2027.json  longfellow-78.json  longfellow.json  package.json  tidy.sh  willard-6-2025-2026.json  willard-6-2026-2027.json  willard-6.json  willard-78-2025-2026.json  willard-78-2026-2027.json  willard-78.json
calendars/: 2022-2023.json  2023-2024.json  2024-2025.json  2025-2026.json
java/: README.md  pom.xml
lib/: README.md  calendars.d.ts  index.d.ts  package-lock.json  package.json  validate.d.ts
lib-py/: DIVERGENCES.md  README.md  pyproject.toml
lib-py/bells/: calendars.py  validate.py
lib-py/tests/: conftest.py  test_calendar.py  test_datetime.py
lib/src/: bell-schedule.js  calendar.js  calendars.js  datetime.js  datetime.ts  index.js  temporal-global.d.ts  types.ts  validate.js  validate.ts
lib/test/: bell-schedule.test.js  bell-schedule.test.ts  calendar.test.js  datetime.test.js  datetime.test.ts  setup.js  validate.test.js  validate.test.ts
libs/golden/: README.md
libs/golden/calendars/: abstract-time.json  synthetic.json
libs/golden/cases/: abstract-time.json  annotations.json  basic-school-day.json  boundary-instants.json  dst-transitions.json  holidays-and-breaks.json  late-start.json  multi-year.json  optional-periods-flat.json  optional-periods-map.json  synthetic-basic.json  teacher-role.json  year-boundaries.json
libs/golden/expected/: abstract-time.json  annotations.json  basic-school-day.json  boundary-instants.json  dst-transitions.json  holidays-and-breaks.json  late-start.json  multi-year.json  optional-periods-flat.json  optional-periods-map.json  synthetic-basic.json  teacher-role.json  year-boundaries.json
libs/java/: README.md  pom.xml
libs/java-bhs-calendars/: .gitignore  README.md  pom.xml
libs/python/: DIVERGENCES.md  README.md  pyproject.toml
libs/python-calendars/: .gitignore  LICENSE  README.md  pyproject.toml
libs/python-calendars/bhs_calendars/: __init__.py
libs/python-calendars/bhs_calendars/data/: bhs-2025-2026.json
libs/python-calendars/tests/: test_load.py
libs/python/bells/: __init__.py  abstract_time.py  bell_schedule.py  calendar.py  calendars.py  cli.py  datetimeutil.py  validate.py
libs/python/tests/: conftest.py  test_abstract_time.py  test_bell_schedule.py  test_calendars.py  test_clock.py  test_datetime.py  test_golden.py  test_validate.py
libs/ts/: README.md  package-lock.json  package.json  tsconfig.json
libs/ts/scripts/: finish-build.mjs  generate-golden.ts
libs/ts/src/: abstract-time.ts  bell-schedule.ts  calendar.ts  calendars.ts  clock.ts  datetime.ts  index.ts  types.ts  validate.ts
libs/ts/test/: abstract-time.test.ts  bell-schedule.test.ts  calendars.test.ts  clock.test.ts  datetime.test.ts  golden.test.ts  validate.test.ts
libs/ts/test/golden/: harness.ts
plans/: TODO.md  alarms.md  background-alarms.md  class-timer-in-bells.md  class-timer.md  generic-annotations.md  library-debug-offset.md  multiple-calendars.md  publish-python-to-pypi.md
plans/done/: DONE.md  bells-abstract-times.md  golden-tests.md  library-parity.md  library-plan.md  library.md  multiple-calendars.md
scripts/: set-version.py
server/: README.md  index.js  package-lock.json  package.json
test/: timer-routines.test.js
(+57 files in other folders)
