[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "bhs-calendars"
version = "2.10.0"
description = "Bundled BHS-area school bell-schedule calendar data for the bells library"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Peter Seibel" }]
keywords = ["bell schedule", "school", "calendar", "berkeley high", "bhs", "education", "data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/gigamonkey/bells"
Repository = "https://github.com/gigamonkey/bells"
"Bug Tracker" = "https://github.com/gigamonkey/bells/issues"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
packages = ["bhs_calendars"]

[tool.setuptools.package-data]
bhs_calendars = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
