[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bells"
version = "0.7.0"
description = "A framework-agnostic library for querying school bell schedules (Python port)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Peter Seibel" }]
dependencies = []

[project.urls]
Repository = "https://github.com/gigamonkey/bells"

[project.scripts]
bells-validate = "bells.cli:main"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
include = ["bells*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
